--- a/ios/UnityTalk/Info.plist
+++ b/ios/UnityTalk/Info.plist
@@ -59,6 +59,7 @@
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Poppins-Thin.ttf</string>
 		<string>app_icons.ttf</string>
+		<string>icomoon.ttf</string>
 	</array>
 </dict>
 </plist>
