--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "@react-native-community/netinfo": "^11.3.2",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/messaging": "^20.4.0",
     "@react-navigation/drawer": "^6.6.15",
     "react": "18.2.0",
     "react-native": "0.74.2",
